--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="relative w-full h-full bg-gray-900 rounded-full overflow-hidden border-4 border-cyan-500/30">
                         <div class="absolute inset-0 flex items-center justify-center">
                             <div class="text-center">
-                                <img src="./bleach.jpg" alt="Profile" class="w-61 h-61 rounded-full object-cover border-4 border-cyan-400 shadow-lg mx-auto mb-2" />
+                                <img src="./talha.jpeg" alt="Profile" class="w-61 h-61 rounded-full object-cover border-4 border-cyan-400 shadow-lg mx-auto mb-2" />
                                 <!-- <div class="neon-text-pink text-xl font-bold">Infrastructure</div>
                                 <div class="neon-text-cyan">DevOps</div> -->
                             </div>
