--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             }
         }
     </style>
+        <link rel="icon" type="image/png" href="./devops.png">
 </head>
 <body class="neon-gradient-bg min-h-screen">
     <!-- Navigation -->
